# syncmed

./: .env.example  .gitignore  docker-compose.yaml  export (2).json  readme.md  关于数据结构设计.md
chatbot/: Cargo.toml
chatbot/src/: main.rs
syncmed/: .env.example  Cargo.toml  Dockerfile.dev  Dockerfile.prod  input.css  package-lock.json  package.json
syncmed/migrations/2026-03-03-123342-0000_create_question_log/: down.sql  up.sql
syncmed/migrations/2026-03-07-100000-0001_baseline_schema/: down.sql  up.sql
syncmed/migrations/2026-03-07-120000-0001_create_patients/: down.sql  up.sql
syncmed/migrations/2026-03-07-130000-0002_normalize_patient_status/: down.sql  up.sql
syncmed/migrations/2026-03-07-140000-0003_add_patient_key/: down.sql  up.sql
syncmed/src/: app.rs  lib.rs  main.rs
syncmed/src/db/: mod.rs  models.rs  schema.rs
syncmed/src/pages/: login.rs  math_helper.rs  medication_reconciliation.rs  mod.rs  patient_information.rs  review_information.rs
syncmed/src/pages/app/: chat_accessibility.rs  chat_confirm.rs  chat_default.rs  confirm_identity.rs  confirm_success_page.rs  input_page.rs  login.rs  mod.rs
syncmed/src/pages/windows/: browse_patient_entry.rs  card_details.rs  generate_url.rs  login.rs  mod.rs  shell.rs  widget.rs
syncmed/src/services/: chat.rs  mod.rs  patient.rs
syncmed/src/structure/: chat.rs
syncmed/style/: output.css
